# cifconv

./: .gitignore  Makefile.am  README.md  configure.ac  visualize_segments.py
cifconv/: Argb.cs  Box.cs  BoxCommandDefinition.cs  CallCommandDefinition.cs  Cif.cs  CifFormatException.cs  CifLexerBase.LexerState.cs  CifLexerBase.LexerToken.cs  CifLexerBase.LexerTokenType.cs  CifLexerBase.cs  CommandDefinition.cs  DefCommandDefinition.cs  DefDeleteCommandDefinition.cs  DefFinishCommandDefinition.cs  DefStartCommandDefinition.cs  DrawStyle.cs  ElectricCmosDrawStyle.cs  ElectricMocmosDrawStyle.cs  ElectricNmosDrawStyle.cs  ElectricRcmosDrawStyle.cs  IDrawable.cs  IIntersectable.cs  LayerCommandDefinition.cs  Layout.cs  Line.cs  Makefile.am  MaskDrawStyle.cs  MirrorAxis.cs  MirrorDefinition.cs  ParserToken.cs  Point.cs  Polygon.cs  PolygonCommandDefinition.cs  Position.cs  PrintCommandDefinition.cs  Program.cs  RotationDefinition.cs  Round.cs  RoundCommandDefinition.cs  StringEscapeExtension.cs  (+9 more)
cifconv/Properties/: AssemblyInfo.cs.in
snk/: cifconv.snk
