EXTRA_DIST =

COMPILE_TARGET = console
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_UNSAFE) $(CSC_STRONGNAME)

all: $(ASSEMBLY) $(LINUX_PKGCONFIG) $(ASSEMBLY_WRAPPER)

FILES = \
	Argb.cs \
	Box.cs \
	BoxCommandDefinition.cs \
	CallCommandDefinition.cs \
	Cif.cs \
	CifFormatException.cs \
	CifLexerBase.cs \
	CifLexerBase.LexerState.cs \
	CifLexerBase.LexerToken.cs \
	CifLexerBase.LexerTokenType.cs \
	CommandDefinition.cs \
	DefCommandDefinition.cs \
	DefDeleteCommandDefinition.cs \
	DefFinishCommandDefinition.cs \
	DefStartCommandDefinition.cs \
	DrawStyle.cs \
	ElectricCmosDrawStyle.cs \
	ElectricMocmosDrawStyle.cs \
	ElectricNmosDrawStyle.cs \
	ElectricRcmosDrawStyle.cs \
	IDrawable.cs \
	IIntersectable.cs \
	LayerCommandDefinition.cs \
	Layout.cs \
	Line.cs \
	MaskDrawStyle.cs \
	MirrorAxis.cs \
	MirrorDefinition.cs \
	ParserToken.cs \
	Point.cs \
	Polygon.cs \
	PolygonCommandDefinition.cs \
	Position.cs \
	PrintCommandDefinition.cs \
	Program.cs \
	Properties/AssemblyInfo.cs \
	RotationDefinition.cs \
	Round.cs \
	RoundCommandDefinition.cs \
	StringEscapeExtension.cs \
	Symbol.cs \
	SymbolNameCommandDefinition.cs \
	TextCommandDefinition.cs \
	TransformationDefinition.cs \
	TranslationDefinition.cs \
	V6502SimGen.cs \
	Vector.cs \
	WireCommandDefinition.cs \
	$(top_srcdir)/extern/clipper/clipper.cs

DATA_FILES =

RESOURCES =

EXTRAS =

REFERENCES = \
	System \
	System.Drawing

PROJECT_REFERENCES =

DLL_REFERENCES =

CLEANFILES =

include $(top_srcdir)/Makefile.include
